data/diff_tests/wasmtime/unreachable_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1744.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\8e\80\80\80\00\01\03\65\6e\76\06\63"
    "\61\6c\6c\65\65\00\00\03\82\80\80\80\00\01\00\0a"
    "\8d\80\80\80\00\01\87\80\80\80\00\00\10\00\41\01"
    "\1a\0b"
  )
""
)